[metadata]
name = scheduler
version = 0.1.0
summary = scheduler - A tool to automatically optimally schedule therapists to individual students and groups.
description-file =
    README.md
author = Myles Steinhauser
author-email = myles.steinhauser@gmail.com
home-page = https://github.com/masteinhauser/scheduler
classifier =
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    scheduler = scheduler.shell:main

[files]
packages =
    scheduler

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
